DependentPickList/main/default/objects/Lead/fields/Action_1__c.field-meta.xml
<CustomField>
    <fullName>Action_1__c</fullName>
    <label>Action 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>All Docs Received - Send to RR</fullName>
            </value>
            <value>
                <fullName>Awaiting Paydown Letters</fullName>
            </value>
            <value>
                <fullName>Cancellation Request</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Complete-Send Back to BLC</fullName>
            </value>
            <value>
                <fullName>Complete-Send Back to RR</fullName>
            </value>
            <value>
                <fullName>Complete - Send to BLC</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead</fullName>
            </value>
            <value>
                <fullName>Entity Complete - Send to BLC</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Info</fullName>
            </value>
            <value>
                <fullName>ISO-UW In Review</fullName>
            </value>
            <value>
                <fullName>Low Credit</fullName>
            </value>
            <value>
                <fullName>Move Back</fullName>
            </value>
            <value>
                <fullName>Move Back to BLC</fullName>
            </value>
            <value>
                <fullName>Move Back to OF-Awaiting Funding</fullName>
            </value>
            <value>
                <fullName>Move Back to UW</fullName>
            </value>
            <value>
                <fullName>New Conditions-Move back</fullName>
            </value>
            <value>
                <fullName>New Conditions Move Back to AWD</fullName>
            </value>
            <value>
                <fullName>No Conditions - ISO Approved</fullName>
            </value>
            <value>
                <fullName>No Conditions - ISO Declined</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>Pre Approved</fullName>
            </value>
            <value>
                <fullName>RR Complete-Hold for Entity Docs</fullName>
            </value>
            <value>
                <fullName>RR Complete-Hold Invalid Paydown Letters</fullName>
            </value>
            <value>
                <fullName>RR Complete-Hold Other</fullName>
            </value>
            <value>
                <fullName>RR Complete- Send to BLC</fullName>
            </value>
            <value>
                <fullName>Seek Decline</fullName>
            </value>
            <value>
                <fullName>Seek Decline - BK, Collections, Lates</fullName>
            </value>
            <value>
                <fullName>Seek Decline - Inquiries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>