DependentPickList/main/default/objects/Lead/fields/Action_2__c.field-meta.xml
<CustomField>
    <fullName>Action_2__c</fullName>
    <label>Action 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Action_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adjust Invoice</fullName>
            </value>
            <value>
                <fullName>All Docs Received - Schedule VC</fullName>
            </value>
            <value>
                <fullName>Alt Offer</fullName>
            </value>
            <value>
                <fullName>Bank Closure Not Resolved</fullName>
            </value>
            <value>
                <fullName>Bank Closure Resolved</fullName>
            </value>
            <value>
                <fullName>Breach of Contract</fullName>
            </value>
            <value>
                <fullName>Cancel Fee Not Paid - To Collections</fullName>
            </value>
            <value>
                <fullName>Cancel Fee Paid</fullName>
            </value>
            <value>
                <fullName>Cancel Invoice</fullName>
            </value>
            <value>
                <fullName>Cancellation Request - Alt Offer</fullName>
            </value>
            <value>
                <fullName>Cancellation Request - Business Failed</fullName>
            </value>
            <value>
                <fullName>Cancellation Request - Funding Results</fullName>
            </value>
            <value>
                <fullName>Cancellation Request – Other</fullName>
            </value>
            <value>
                <fullName>Cancellation Request – Rate</fullName>
            </value>
            <value>
                <fullName>Client Agrees</fullName>
            </value>
            <value>
                <fullName>Client Decline - Alt Offer</fullName>
            </value>
            <value>
                <fullName>Client Decline - Insufficient Funding</fullName>
            </value>
            <value>
                <fullName>Client Decline – Other</fullName>
            </value>
            <value>
                <fullName>Client Decline – Rate</fullName>
            </value>
            <value>
                <fullName>Client Declines - Not Moving Forward</fullName>
            </value>
            <value>
                <fullName>Client Declines - No to CC&#39;s</fullName>
            </value>
            <value>
                <fullName>Client Issue - Bank Closure</fullName>
            </value>
            <value>
                <fullName>Client Issue – Other</fullName>
            </value>
            <value>
                <fullName>Client Issue - Product/Fee</fullName>
            </value>
            <value>
                <fullName>Client Not Saved - Fee Paid</fullName>
            </value>
            <value>
                <fullName>Client Not Saved - Invoiced Cancel Fee</fullName>
            </value>
            <value>
                <fullName>Client Not Saved - Payment Not Received +21 Days</fullName>
            </value>
            <value>
                <fullName>Client Saved</fullName>
            </value>
            <value>
                <fullName>Client Signs</fullName>
            </value>
            <value>
                <fullName>Closing Call Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>