DependentPickList/main/default/objects/Lead/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U-Ready for Underwriting</fullName>
            </value>
            <value>
                <fullName>U-Underwriting in Progress</fullName>
            </value>
            <value>
                <fullName>U-ISO-Pending Approval</fullName>
            </value>
            <value>
                <fullName>U-ISO-Underwriting in Process</fullName>
            </value>
            <value>
                <fullName>AW-Agreement Walkthrough</fullName>
            </value>
            <value>
                <fullName>AW-Scheduled Appointment</fullName>
            </value>
            <value>
                <fullName>AW-Rescheduled Appointment</fullName>
            </value>
            <value>
                <fullName>PS-Pending Signature</fullName>
            </value>
            <value>
                <fullName>PS-Scheduled Appointment</fullName>
            </value>
            <value>
                <fullName>PS-Rescheduled Appointment</fullName>
            </value>
            <value>
                <fullName>AD-Additional Docs</fullName>
            </value>
            <value>
                <fullName>AWD-Awaiting Docs</fullName>
            </value>
            <value>
                <fullName>VC-Scheduled for Call</fullName>
            </value>
            <value>
                <fullName>VC-Waiting for VCQ</fullName>
            </value>
            <value>
                <fullName>VC-Ready for Call</fullName>
            </value>
            <value>
                <fullName>VC-RR-Pending Docs</fullName>
            </value>
            <value>
                <fullName>VC-BLC-Pending Docs</fullName>
            </value>
            <value>
                <fullName>RR-Ready for Processing</fullName>
            </value>
            <value>
                <fullName>RR-Awaiting Paydown Letters</fullName>
            </value>
            <value>
                <fullName>RR-Sent to Rapid Rescore</fullName>
            </value>
            <value>
                <fullName>RR-Pending Entity Docs</fullName>
            </value>
            <value>
                <fullName>RR-Pending-Other</fullName>
            </value>
            <value>
                <fullName>BLC-Bank List Creation</fullName>
            </value>
            <value>
                <fullName>OF-Awaiting Funding</fullName>
            </value>
            <value>
                <fullName>IW-Invoice Walkthrough</fullName>
            </value>
            <value>
                <fullName>IW-Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>IW-Appointment Rescheduled</fullName>
            </value>
            <value>
                <fullName>AR-Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>AR-Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>AR-Appointment Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>